--- a/.github/workflows/reuse_calling.yml
+++ b/.github/workflows/reuse_calling.yml
@@ -6,7 +6,7 @@ on:
       solution_name:
         description: 'The solution name.'
         type: string
-        default: app_sol
+        default: gitsol
       solution_shipping_folder:
         description: 'folder name for staging the exported solution *do not change*'
         type: string
