--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,7 +6,7 @@ on:
       solution_name:
         description: 'Name of the solution to work on from Power Platform'
         required: true
-        default: appsol
+        default: app_sol
       solution_exported_folder:
         description: 'Folder name for staging the exported solution *do not change*'
         required: true
@@ -64,21 +64,21 @@ jobs:
         client-secret: ${{ secrets.CLIENT_SPN }}
         tenant-id: ${{secrets.TENANT_ID}}
         solution-name: gitsol
-        solution-output-file: out/exported/appsol.zip
+        solution-output-file: out/exported/app_sol.zip
 
     - name: unpack-solution action
       uses: microsoft/powerplatform-actions/unpack-solution@v1  # Use latest available version
       with:
-        solution-file: out/exported/appsol.zip
-        solution-folder: out/solutions/appsol
+        solution-file: out/exported/app_sol.zip
+        solution-folder: out/solutions/app_sol
         solution-type: 'Unmanaged'
         overwrite-files: true
 
     - name: branch-solution, prepare it for a PullRequest
       uses: microsoft/powerplatform-actions/branch-solution@v1  # Use latest available version
       with:
-        solution-folder: out/solutions/appsol
-        solution-target-folder: solutions/appsol
+        solution-folder: out/solutions/app_sol
+        solution-target-folder: solutions/app_sol
         repo-token: ${{ secrets.GH_TOKEN }}
         allow-empty-commit: true
     
