--- a/.github/workflows/Solution_Redeploy.yml
+++ b/.github/workflows/Solution_Redeploy.yml
@@ -1,4 +1,4 @@
-name: release-solution-to-prod-reusable
+name: export-redeploy-solution-to-prod-reusable
 
 on:
   workflow_call:
@@ -32,7 +32,6 @@ on:
         type: string
         required: true
 
-
     secrets:
       CLIENT_ID:
         description: 'The client id'
@@ -48,7 +47,7 @@ on:
         required: true
 
 jobs:
-  convert-to-managed:
+  export-updated-solution:
     runs-on: windows-latest
     env:
       RUNNER_DEBUG: 1
@@ -61,54 +60,26 @@ jobs:
      
     - name: Install Power Platform CLI (PAC)
       uses: microsoft/powerplatform-actions/actions-install@v1
-  
-    
-    - name: Pack solution
-      uses: microsoft/powerplatform-actions/pack-solution@main
-      with:
-        solution-folder: ${{ inputs.solution_source_folder }}/${{ inputs.solution_name }}
-        solution-file: ${{ inputs.solution_outbound_folder }}/${{ inputs.solution_name }}.zip
-        solution-type: Unmanaged
 
-    - name: Import solution as unmanaged to build env
-      uses: microsoft/powerplatform-actions/import-solution@main
-      with:
-
-        # environment-url: 'https://org5569b62d.crm15.dynamics.com'
-        # app-id: '94e95571-a37c-432e-bae6-1ae9671a4983'
-        # client-secret: 'Icm8Q~DW6gqGm1Cn8CO02HaiHTgnYfh_lCla5bU1'
-        # tenant-id: '302edaf0-65d6-449a-a796-b83cfb733f0d'
-        
-        environment-url: ${{ inputs.BUILD_ENVIRONMENT_URL }}
-        app-id: ${{ vars.VAR_CLIENT }}
-        client-secret: ${{ secrets.envSecret }}
-        tenant-id: ${{ vars.VAR_TENANT }}
-      
-        solution-file: ${{ inputs.solution_outbound_folder }}/${{ inputs.solution_name }}.zip
-        force-overwrite: true
-        publish-changes: true
-
-    - name: Export solution as managed
+    - name: Export solution as managed from build env
       uses: microsoft/powerplatform-actions/export-solution@main
       with:
         environment-url: ${{ inputs.BUILD_ENVIRONMENT_URL }}
         app-id: ${{ vars.VAR_CLIENT }}
         client-secret: ${{ secrets.envSecret }}
         tenant-id: ${{ vars.VAR_TENANT }}
-  
         solution-name: ${{ inputs.solution_name }}
         managed: true
         solution-output-file: ${{ inputs.solution_shipping_folder }}/${{ inputs.solution_name }}_managed.zip
 
-    - name: Upload the ready to ship solution to GH artifact store
+    - name: Upload the exported solution to GH artifact store
       uses: actions/upload-artifact@v4
       with:
         name: managedSolutions
         path: ${{ inputs.solution_shipping_folder }}
 
-  
   release-to-staging:
-    needs: [ convert-to-managed ]
+    needs: [ export-updated-solution ]
     runs-on: windows-latest
     env:
       RUNNER_DEBUG: 1
@@ -116,11 +87,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
-        # lfs: true
         token: ${{ secrets.GH_TOKEN }}
     - name: Install Power Platform CLI (PAC)
       uses: microsoft/powerplatform-actions/actions-install@v1
-    - name: Fetch the ready to ship solution from GH artifact store
+    - name: Fetch the exported solution from GH artifact store
       uses: actions/download-artifact@v4
       with:
         name: managedSolutions
