--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -74,11 +74,20 @@ jobs:
         solution-type: 'Unmanaged'
         overwrite-files: true
 
+    - name: Create branch and link to Jira issue
+      run: |
+        git config --global user.name "GitHub Actions"
+        git config --global user.email "actions@github.com"
+        git checkout -b KOM-2-testjira
+        git add .
+        git commit -m "Created branch KOM-1-testjira for Jira issue KOM-2"
+        git push origin KOM-2-testjira
+
     - name: branch-solution, prepare it for a PullRequest
       uses: microsoft/powerplatform-actions/branch-solution@v1  # Use latest available version
       with:
         solution-folder: out/solutions/testjira
-        solution-target-folder: solutions/KOM-1-testjira
+        solution-target-folder: solutions/KOM-2-testjira
         repo-token: ${{ secrets.GH_TOKEN }}
         allow-empty-commit: true
     
