--- a/.github/workflows/Export-branch.yml
+++ b/.github/workflows/Export-branch.yml
@@ -6,7 +6,7 @@ on:
       solution_name:
         description: 'Name of the solution to work on from Power Platform'
         required: true
-        default: testjira
+        default: canvas
       solution_exported_folder:
         description: 'Folder name for staging the exported solution *do not change*'
         required: true
@@ -64,13 +64,13 @@ jobs:
         client-secret: ${{ secrets.CLIENT_SPN }}
         tenant-id: ${{secrets.TENANT_ID}}
         solution-name: gitsol
-        solution-output-file: out/exported/testjira.zip
+        solution-output-file: out/exported/canvas.zip
 
     - name: unpack-solution action
       uses: microsoft/powerplatform-actions/unpack-solution@v1  # Use latest available version
       with:
-        solution-file: out/exported/testjira.zip
-        solution-folder: out/solutions/testjira
+        solution-file: out/exported/canvas.zip
+        solution-folder: out/solutions/canvas
         solution-type: 'Unmanaged'
         overwrite-files: true
 
@@ -78,16 +78,16 @@ jobs:
       run: |
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
-        git checkout -b KOM-2-testjira
+        git checkout -b KOM-3-canvas
         git add .
         git commit -m "Created branch KOM-1-testjira for Jira issue KOM-2"
-        git push origin KOM-2-testjira
+        git push origin KOM-3-canvas
 
     - name: branch-solution, prepare it for a PullRequest
       uses: microsoft/powerplatform-actions/branch-solution@v1  # Use latest available version
       with:
-        solution-folder: out/solutions/testjira
-        solution-target-folder: solutions/KOM-2-testjira
+        solution-folder: out/solutions/canvas
+        solution-target-folder: solutions/KOM-3-canvas
         repo-token: ${{ secrets.GH_TOKEN }}
         allow-empty-commit: true
     
