--- a/.github/workflows/automatically-get-sol.yml
+++ b/.github/workflows/automatically-get-sol.yml
@@ -6,7 +6,7 @@ on:
       solution_name:
         description: 'Name of the solution to work on from Power Platform'
         required: true
-        default: canvasapp
+
 
 permissions:
   contents: write
@@ -33,22 +33,22 @@ jobs:
           app-id: ${{ secrets.CLIENT_ID }}
           client-secret: ${{ secrets.Client_SPN }}
           tenant-id: ${{ secrets.TENANT_ID }}
-          solution-name: canvasapp
-          solution-output-file: out/exported/canvasapp.zip
+          solution-name: ${{ inputs.solution_name }}
+          solution-output-file: out/exported/${{ inputs.solution_name }}.zip
 
       - name: unpack-solution
         uses: microsoft/powerplatform-actions/unpack-solution@v1
         with:
-          solution-file: out/exported/canvasapp.zip
-          solution-folder: out/solutions/canvasapp
+          solution-file: out/exported/${{ inputs.solution_name }}.zip
+          solution-folder: out/solutions/${{ inputs.solution_name }}
           solution-type: 'Unmanaged'
           overwrite-files: true
 
       - name: branch-solution
         uses: microsoft/powerplatform-actions/branch-solution@v1
         with:
-          solution-folder: out/solutions/canvasapp
-          solution-target-folder: solutions/canvasapp
+          solution-folder: out/solutions/${{ inputs.solution_name }}
+          solution-target-folder: solutions/${{ inputs.solution_name }}
           repo-token: ${{ secrets.GH_TOKEN }}
           allow-empty-commit: true
 
@@ -100,6 +100,21 @@ jobs:
               }
             }
 
+
+  send-approval-notification:
+    needs: export-from-dev
+    runs-on: ubuntu-latest
+    steps:
+      - name: Notify CODEOWNER for Approval
+        run: |
+          curl -X POST \
+            -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            -d "{\"body\": \"@CODEOWNERS Approval required for release to production.\"}" \
+            "https://api.github.com/repos/${{ github.repository }}/issues/${{ env.PR_NUMBER }}/comments"
+
+              
+
   merge-pr:
     runs-on: ubuntu-latest
     needs: wait-for-codeowner-approval
@@ -119,3 +134,11 @@ jobs:
             -H "Accept: application/vnd.github.v3+json" \
             "https://api.github.com/repos/${{ github.repository }}/pulls/${{ env.PR_NUMBER }}/merge" \
             -d '{"merge_method": "merge"}'
+
+      - name: Delete Branch
+        if: success()  # Only run if the previous steps succeeded
+        run: |
+          curl -X DELETE \
+            -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            "https://api.github.com/repos/${{ github.repository }}/git/refs/heads/update-solution-${{ inputs.solution_name }}"
