--- a/.github/workflows/jira-webhook-export-branch.yml
+++ b/.github/workflows/jira-webhook-export-branch.yml
@@ -1,4 +1,5 @@
-name: Jira Webhook to Solution Export and Branch
+name: Jira Webhook to Solution Deployment
+
 on:
   workflow_dispatch:
     inputs:
@@ -162,3 +163,17 @@ jobs:
             -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
             -H "Accept: application/vnd.github.v3+json" \
             "https://api.github.com/repos/${{ github.repository }}/git/refs/heads/update-solution-${{ needs.process-jira-issue.outputs.solution_name }}"
+
+  deploy-to-production:
+    needs: merge-pr
+    uses: ./.github/workflows/automatically_deploy-prod.yml
+    with:
+      solution_name: ${{ needs.process-jira-issue.outputs.solution_name }}
+      solution_version: ${{ needs.process-jira-issue.outputs.solution_version }}
+      BUILD_ENVIRONMENT_URL: ${{ vars.VAR_DEV }}
+      PRODUCTION_ENVIRONMENT_URL: ${{ vars.VAR_PROD }}
+    secrets:
+      CLIENT_ID: ${{ secrets.CLIENT_ID }}
+      TENANT_ID: ${{ secrets.TENANT_ID }}
+      envSecret: ${{ secrets.ENVSECRET }}
+      GH_TOKEN: ${{ secrets.GH_TOKEN }}
